feat: Introduce OAI native deep research (#1252)
* feat: Introduce OAI native deep research

* Update README.md

* Add structured JSON responses to DeepResearchTool

Enhanced the DeepResearchTool to yield structured JSON messages alongside text messages for start, cancel, retrieve, and report actions. This provides more machine-readable output, including response metadata and error details where applicable.

* Add configurable timeout to DeepResearchTool

Introduces a 'timeout' parameter to the deep_research tool, allowing users to specify the API request timeout in seconds. Refactors OpenAI client initialization to support the new parameter and updates the YAML schema accordingly.

* Update deep_research.yaml

* Add advanced config and refactor deep research tool

Introduces dataclasses for structured response handling, adds support for temperature, reasoning_effort, and summary parameters, and refactors tool logic for clarity and extensibility. Updates the YAML to expose new parameters in the UI. Improves citation formatting and error handling.

* Update deep_research.yaml

* Add support for reasoning summary_text in DeepResearchTool

Extended DeepResearchTool to handle 'reasoning' items with 'summary_text' type. Now, summary_text entries are extracted and included in the research process, improving traceability of reasoning steps.

* Update OpenAI icon asset

Replaces the existing icon.png in tools/openai/_assets with a new version. This may be for branding, visual refresh, or improved clarity.

* Update OpenAI asset images

Replaces the existing openai_1.png through openai_6.png images in tools/openai/_assets with updated versions.

* Update openai.py

--- a/tools/openai/manifest.yaml
+++ b/tools/openai/manifest.yaml
@@ -1,13 +1,11 @@
 author: langgenius
 created_at: '2024-09-20T08:03:44.658609186Z'
 description:
-  en_US: OpenAI Image Generation and Editing
-  pt_BR: OpenAI Image Generation and Editing
-  zh_Hans: OpenAI 图像生成和编辑
+  en_US: OpenAI Tools
+  zh_Hans: OpenAI 工具集
 icon: icon.png
 label:
   en_US: OpenAI
-  pt_BR: OpenAI
   zh_Hans: OpenAI
 meta:
   arch:
@@ -34,4 +32,4 @@ tags:
 - image
 - productivity
 type: plugin
-version: 0.0.1
+version: 0.1.0
