feat: add moonshotai/Kimi-K2-Instruct in siliconflow (#1285)
* feat: add Pro/moonshotai/Kimi-K2-Instruct in siliconflow

* feat: add moonshotai/Kimi-K2-Instruct in siliconflow

---------

Co-authored-by: Barnett Xu <xuxiongfeng@yimian.com.cn>

--- a/models/siliconflow/models/llm/_position.yaml
+++ b/models/siliconflow/models/llm/_position.yaml
@@ -1,4 +1,5 @@
 - Pro/moonshotai/Kimi-K2-Instruct
+- moonshotai/Kimi-K2-Instruct
 - Pro/deepseek-ai/DeepSeek-R1
 - Pro/deepseek-ai/DeepSeek-V3
 - deepseek-ai/DeepSeek-R1
