--- a/models/xinference/provider/xinference.yaml
+++ b/models/xinference/provider/xinference.yaml
@@ -31,7 +31,7 @@ model_credential_schema:
         en_US: Enter the url of your Xinference, e.g. http://192.168.1.100:9997
         zh_Hans: 在此输入Xinference的服务器地址，如 http://192.168.1.100:9997
       required: true
-      type: secret-input
+      type: text-input
       variable: server_url
     - label:
         en_US: Model uid
