--- a/models/openrouter/manifest.yaml
+++ b/models/openrouter/manifest.yaml
@@ -13,6 +13,8 @@ icon: openrouter_square.svg
 description:
   en_US: OpenRouter is a powerful platform that provides access to a diverse set of language models, including both commercial and open-source options.
   zh_Hans: OpenRouter 是一个强大的平台，提供对多种语言模型的访问，包括商业和开源选项。
+  ja_JP: OpenRouter は、商用およびオープンソースの言語モデルを含む多様なセットにアクセスできる強力なプラットフォームです。
+  pt_BR: OpenRouter é uma poderosa plataforma que fornece acesso a um conjunto diversificado de modelos de linguagem, incluindo opções comerciais e de código aberto.
 label:
   en_US: OpenRouter
 resource:
@@ -24,5 +26,5 @@ type: plugin
 plugins:
   models:
     - provider/openrouter.yaml
-version: 0.0.14
+version: 0.0.15
 created_at: 2024-09-20T00:13:50.29298939-04:00
