--- a/models/huaweicloud_maas/manifest.yaml
+++ b/models/huaweicloud_maas/manifest.yaml
@@ -23,7 +23,8 @@ resource:
   memory: 268435456
   permission:
     model:
-      enabled: false
+      enabled: true
+      llm: true
 type: plugin
-version: 0.0.1
+version: 0.0.2
 created_at: 2025-06-04T12:32:17.824356+08:00
