feat: update moonshot logo (#1306)
* feat: update logo

* feat: update img

--- a/models/moonshot/provider/moonshot.yaml
+++ b/models/moonshot/provider/moonshot.yaml
@@ -20,7 +20,7 @@ help:
 icon_large:
   en_US: icon_l_en.png
 icon_small:
-  en_US: icon_s_en.png
+  en_US: icon_k2_s_en.png
 label:
   en_US: Moonshot
   zh_Hans: 月之暗面
