Refractor:update slidespeak plugin configuration and refactor api calls (#1308)
* Update SlideSpeak plugin configuration and refactor API calls

- Increased MAX_REQUEST_TIMEOUT from 120 to 180 seconds for better handling of requests.
- Replaced `requests` library with `httpx` for improved asynchronous support.
- Simplified credential validation by removing unnecessary base URL handling.
- Updated API endpoint to check user credentials against a new URL.
- Removed deprecated SlidesGenerator tool and its associated files, streamlining the codebase.

* Refactor SlideSpeak: add tools, update docs, improve API

Added new tools for document upload and template listing, and refactored presentation generation to use a centralized SlideSpeakClient. Updated README with detailed parameter constraints and tool descriptions. Enhanced YAML schemas for new and existing tools, improved error handling and validation, and updated requirements to use the latest dify_plugin. Removed unused assets and increased API robustness. Bumped version to 0.1.0.

* Revert "Refactor SlideSpeak: add tools, update docs, improve API"

This reverts commit 5fe4ae1300c883e95307206eae08dd8653afb9f4.

* Reapply "Refactor SlideSpeak: add tools, update docs, improve API"

This reverts commit 1f9fbad1fafd1ea19e2a45e57e6371f2e0324ce2.

* Update manifest.yaml

* Refactor SlideSpeak tools for improved readability

This commit applies consistent formatting, improves error messages, and enhances code readability across SlideSpeak tool modules. Changes include better line breaks, clearer error handling, and minor logic clarifications, but no functional changes to the core logic.

--- a/tools/slidespeak/provider/slidespeak.yaml
+++ b/tools/slidespeak/provider/slidespeak.yaml
@@ -23,4 +23,7 @@ identity:
     zh_Hans: SlideSpeak
   name: slidespeak
 tools:
-- tools/slides_generator.yaml
+- tools/presentation_generator.yaml
+- tools/slide_by_slide_generator.yaml
+- tools/document_uploader.yaml
+- tools/template_lister.yaml
