Fix: refract tool calling for all available models (#1307)
* Fix: refract tool calling for all available models

Updates the OpenAILargeLanguageModel to support the new OpenAI API tool-call and stream-tool-call features, including new payload formats and streaming aggregation logic. Model YAML files are updated to declare tool-call and stream-tool-call support where appropriate. The OpenAI Python SDK is upgraded to 1.97.0 to enable these features. Also updates manifest version to 0.1.0.

* Comment out o-series system prompt compatibility logic

The code that converts system prompt messages to user prompt messages for o-series compatibility has been commented out. This is no longer needed as the system prompt will be converted to a developer message elsewhere.

--- a/models/openai/models/llm/o3-2025-04-16.yaml
+++ b/models/openai/models/llm/o3-2025-04-16.yaml
@@ -5,6 +5,9 @@ label:
 model_type: llm
 features:
   - agent-thought
+  - tool-call
+  - vision
+  - stream-tool-call
 model_properties:
   mode: chat
   context_size: 200000
