--- a/models/openai/models/llm/o3-mini-2025-01-31.yaml
+++ b/models/openai/models/llm/o3-mini-2025-01-31.yaml
@@ -5,6 +5,8 @@ label:
 model_type: llm
 features:
   - agent-thought
+  - tool-call
+  - stream-tool-call
 model_properties:
   mode: chat
   context_size: 200000
