--- a/models/openai/models/llm/o3-mini.yaml
+++ b/models/openai/models/llm/o3-mini.yaml
@@ -5,8 +5,8 @@ label:
 model_type: llm
 features:
   - agent-thought
-  # ! vision features is not supported in OpenAI o3-mini
-  # https://platform.openai.com/docs/models/o3-mini
+  - tool-call
+  - stream-tool-call
 model_properties:
   mode: chat
   context_size: 200000
