--- a/models/openai/models/llm/o3.yaml
+++ b/models/openai/models/llm/o3.yaml
@@ -6,6 +6,8 @@ model_type: llm
 features:
   - agent-thought
   - vision
+  - tool-call
+  - stream-tool-call
 model_properties:
   mode: chat
   context_size: 200000
