--- a/models/openai/models/llm/o4-mini-2025-04-16.yaml
+++ b/models/openai/models/llm/o4-mini-2025-04-16.yaml
@@ -5,6 +5,9 @@ label:
 model_type: llm
 features:
   - agent-thought
+  - tool-call
+  - vision
+  - stream-tool-call
 model_properties:
   mode: chat
   context_size: 200000
