--- a/models/groq/models/llm/_position.yaml
+++ b/models/groq/models/llm/_position.yaml
@@ -1,13 +1,4 @@
+- moonshotai/kimi-k2-instruct
+- qwen/qwen3-32b
 - deepseek-r1-distill-llama-70b
-- deepseek-r1-distill-qwen-32b
-- qwen-2.5-32b
-- qwen-2.5-coder-32b
-- qwen-qwq-32b
-- llama-3.1-405b-reasoning
-- llama-3.1-70b-versatile
 - llama-3.1-8b-instant
-- llama3-70b-8192
-- llama3-8b-8192
-- mixtral-8x7b-32768
-- llama2-70b-4096
-- llama-guard-3-8b
