--- a/models/groq/models/llm/moonshotai-kimi-k2-instruct.yaml
+++ b/models/groq/models/llm/moonshotai-kimi-k2-instruct.yaml
@@ -1,11 +1,13 @@
-# https://console.groq.com/docs/model/qwen-qwq-32b
-model: qwen-qwq-32b
+# https://huggingface.co/moonshotai/Kimi-K2-Instruct
+# https://console.groq.com/docs/model/moonshotai/kimi-k2-instruct
+model: moonshotai/kimi-k2-instruct
 label:
-  zh_Hans: Qwen QwQ 32B (Preview) 128k
-  en_US: Qwen QwQ 32B (Preview) 128k
+  zh_Hans: Kimi K2 Instruct
+  en_US: Kimi K2 Instruct
 model_type: llm
 features:
   - agent-thought
+  - tool-call
   - multi-tool-call
   - stream-tool-call
 model_properties:
@@ -14,16 +16,16 @@ model_properties:
 parameter_rules:
   - name: temperature
     use_template: temperature
+    default: 0.7
   - name: top_p
     use_template: top_p
   - name: max_tokens
     use_template: max_tokens
-    default: 512
+    default: 16384
     min: 1
-    max: 8192
+    max: 16384
 pricing:
-  input: "0.29"
-  output: "0.39"
+  input: "1.0"
+  output: "3.0"
   unit: "0.000001"
   currency: USD
-deprecated: true
