--- a/models/gemini/models/llm/_position.yaml
+++ b/models/gemini/models/llm/_position.yaml
@@ -1,5 +1,6 @@
 - gemini-2.5-pro
 - gemini-2.5-flash
+- gemini-2.5-flash-lite
 - gemini-2.5-flash-lite-preview-06-17
 - gemini-2.5-pro-preview-06-05
 - gemini-2.5-pro-preview-05-06
