--- a/tools/github/manifest.yaml
+++ b/tools/github/manifest.yaml
@@ -1,8 +1,9 @@
 author: langgenius
-created_at: '2024-09-20T08:03:44.658609186Z'
+created_at: "2024-09-20T08:03:44.658609186Z"
 description:
   en_US: GitHub is an online software source code hosting service.
-  pt_BR: GitHub é uma plataforma online para serviços de hospedagem de código fonte
+  pt_BR:
+    GitHub é uma plataforma online para serviços de hospedagem de código fonte
     de software.
   zh_Hans: GitHub是一个在线软件源代码托管服务平台。
 icon: icon.svg
@@ -12,17 +13,18 @@ label:
   zh_Hans: GitHub
 meta:
   arch:
-  - amd64
-  - arm64
+    - amd64
+    - arm64
   runner:
     entrypoint: main
     language: python
-    version: '3.12'
-  version: 0.0.1
+    version: "3.12"
+  version: 0.2.8
+  minimum_dify_version: 1.7.0
 name: github
 plugins:
   tools:
-  - provider/github.yaml
+    - provider/github.yaml
 resource:
   memory: 1048576
   permission:
@@ -32,6 +34,6 @@ resource:
     tool:
       enabled: true
 tags:
-- utilities
+  - utilities
 type: plugin
-version: 0.0.6
+version: 0.2.8
