add qwen3-coder-plus (#1342)
* add qwen3-coder-plus

* add qwen3-coder-plus

* add qwen3-coder-plus

--- a/models/tongyi/models/llm/_position.yaml
+++ b/models/tongyi/models/llm/_position.yaml
@@ -52,6 +52,7 @@
 - qwen3-4b
 - qwen3-1.7b
 - qwen3-0.6b
+- qwen3-coder-plus
 - qwen2.5-72b-instruct
 - qwen2.5-32b-instruct
 - qwen2.5-14b-instruct-1m
