Feat/update modelscope (#1355)

--- a/models/modelscope/manifest.yaml
+++ b/models/modelscope/manifest.yaml
@@ -1,9 +1,9 @@
-version: 0.0.4
+version: 0.0.5
 type: plugin
 author: langgenius
 name: modelscope
 label:
-  en_US: modelscope
+  en_US: ModelScope
   zh_Hans: 魔搭社区
 description:
   en_US: Models provided by ModelScope
