--- a/tools/outlook/manifest.yaml
+++ b/tools/outlook/manifest.yaml
@@ -1,12 +1,12 @@
-version: 0.0.2
+version: 0.1.0
 type: plugin
 author: langgenius
 name: outlook
 label:
-  en_US: outlook (client credential flow)
-  ja_JP: outlook (client credential flow)
-  zh_Hans: outlook (client credential flow)
-  pt_BR: outlook (client credential flow)
+  en_US: outlook
+  ja_JP: outlook
+  zh_Hans: outlook
+  pt_BR: outlook
 description:
   en_US: Dify's integration with Microsoft Outlook that can help you read, send, list, delete Outlook Email.
   ja_JP: Dify's integration with Microsoft Outlook that can help you read, send, list, delete Outlook Email.
