--- a/tools/outlook/tools/get_message.yaml
+++ b/tools/outlook/tools/get_message.yaml
@@ -10,12 +10,12 @@ identity:
     zh_Hant: 獲取訊息
 description:
   human:
-    en_US: Get detailed information about a specific email message
-    zh_Hans: 获取特定电子邮件的详细信息
-    pt_BR: Obter informações detalhadas sobre uma mensagem de e-mail específica
-    ja_JP: 特定のメールの詳細情報を取得
-    zh_Hant: 獲取特定電子郵件的詳細資訊
-  llm: Get detailed information about a specific email message using Microsoft Graph API, including content, attachments, and metadata
+    en_US: Get detailed information about a specific email message by its ID
+    zh_Hans: 通过ID获取特定电子邮件的详细信息
+    pt_BR: Obter informações detalhadas sobre uma mensagem de e-mail específica pelo seu ID
+    ja_JP: IDで特定のメールの詳細情報を取得
+    zh_Hant: 通過ID獲取特定電子郵件的詳細資訊
+  llm: Get detailed information about a specific email message using Microsoft Graph API. This tool is ideal for retrieving complete details of a single email when you have its message ID (obtained from list_messages tool). It returns full content, attachments, sender/recipient details, and metadata. Use this when you need comprehensive information about one specific email rather than searching through multiple emails.
 
 parameters:
   - name: message_id
@@ -28,12 +28,12 @@ parameters:
       ja_JP: メッセージID
       zh_Hant: 訊息ID
     human_description:
-      en_US: The unique identifier of the message to retrieve
-      zh_Hans: 要检索的消息的唯一标识符
-      pt_BR: O identificador único da mensagem para recuperar
-      ja_JP: 取得するメッセージの一意の識別子
-      zh_Hant: 要檢索的訊息的唯一識別符
-    llm_description: The unique identifier of the message to retrieve, this ID can be obtained from the list_messages tool
+      en_US: The unique identifier of the message to retrieve (obtained from list_messages tool)
+      zh_Hans: 要检索的消息的唯一标识符（从list_messages工具获得）
+      pt_BR: O identificador único da mensagem para recuperar (obtido da ferramenta list_messages)
+      ja_JP: 取得するメッセージの一意の識別子（list_messagesツールから取得）
+      zh_Hant: 要檢索的訊息的唯一識別符（從list_messages工具獲得）
+    llm_description: The unique identifier of the message to retrieve. This ID should be obtained from the list_messages tool when you want to get detailed information about a specific email. This approach is more efficient than searching through multiple emails when you already know which specific message you need.
     form: llm
 extra:
   python:
