fix: add OAuth refresh token for Outlook & update README (#1369)
* fix: add OAuth refresh token for Outlook & update README

- update _SCOPE to return refresh_token
- add oauth_refresh_credentials
- remove unneeded description about Graph API permission settings

Signed-off-by: jingfelix <jingfelix@outlook.com>

* version: bump the version of outlook to 0.2.0

Signed-off-by: jingfelix <jingfelix@outlook.com>

* feat: add tool `send_message`

- add `tool/send_message.py`
- add minimum_dify_version
- fix sdk version

Signed-off-by: jingfelix <jingfelix@outlook.com>

---------

Signed-off-by: jingfelix <jingfelix@outlook.com>

--- a/tools/outlook/manifest.yaml
+++ b/tools/outlook/manifest.yaml
@@ -1,4 +1,4 @@
-version: 0.1.0
+version: 0.2.0
 type: plugin
 author: langgenius
 name: outlook
@@ -28,6 +28,7 @@ meta:
     language: python
     version: "3.12"
     entrypoint: main
+  minimum_dify_version: 1.7.0
 created_at: 2025-06-03T17:15:02.022093+08:00
 privacy: PRIVACY.md
 verified: false
