--- a/tools/comfyui/tools/download_huggingface.yaml
+++ b/tools/comfyui/tools/download_huggingface.yaml
@@ -93,7 +93,7 @@ parameters:
 output_schema:
   type: object
   properties:
-    filename:
+    filepath:
       type: string
       label:
         en_US: Filename
