--- a/models/tongyi/models/llm/_position.yaml
+++ b/models/tongyi/models/llm/_position.yaml
@@ -44,6 +44,9 @@
 - qwen-turbo-0624
 - qwen-turbo-chat
 - qwen-turbo
+- qwen3-235b-a22b-thinking-2507
+- qwen3-235b-a22b-instruct-2507
+- qwen3-30b-a3b-instruct-2507
 - qwen3-235b-a22b
 - qwen3-30b-a3b
 - qwen3-32b
