--- a/models/siliconflow/models/llm/_position.yaml
+++ b/models/siliconflow/models/llm/_position.yaml
@@ -10,6 +10,9 @@
 - deepseek-ai/DeepSeek-R1-Distill-Llama-70B
 - deepseek-ai/DeepSeek-R1-Distill-Llama-8B
 - Qwen/Qwen3-235B-A22B
+- Qwen/Qwen3-235B-A22B-Instruct-2507
+- Qwen/Qwen3-235B-A22B-Thinking-2507
+- Qwen/Qwen3-30B-A3B-Instruct-2507
 - Qwen/Qwen3-32B
 - Qwen/Qwen3-30B-A3B
 - Qwen/Qwen3-14B
@@ -26,3 +29,5 @@
 - Pro/Qwen/Qwen2.5-VL-7B-Instruct
 - THUDM/GLM-4.1V-9B-Thinking
 - THUDM/glm-4-9b-chat
+- zai-org/GLM-4.5
+- zai-org/GLM-4.5-Air
