--- a/models/zhipuai/models/llm/_position.yaml
+++ b/models/zhipuai/models/llm/_position.yaml
@@ -3,6 +3,11 @@
 - chatglm_pro
 - chatglm_std
 - chatglm_turbo
+- glm-4.5
+- glm-4.5-air
+- glm-4.5-airx
+- glm-4.5-flash
+- glm-4.5-x
 - glm-4-0520
 - glm-4-air
 - glm-4-airx
